--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "mp42foundation-contrib"]
-	path = mp42foundation-contrib
-	url = https://NCrusher@bitbucket.org/NCrusher/mp42foundation-contrib.git
+[submodule "mp42foundation"]
+	path = mp42foundation
+	url = https://NCrusher@bitbucket.org/NCrusher/mp42foundation.git
